0.3.1svn:
- Bugfix: Unable to open warning message fixed
- Help message typo (-md5 -> --md5)
- Root XML node attributes split over multiple lines
- Bugfix --addpath was broken (due to typo in option scanner)
- Add location if none is given and the host has a landcode
- Added boost_regex library dependency
- Added "MD5()=" type md5list support

0.3.0:
- Added headerfile option, to allow a file to be included just after <metlink>
- Removed gnunet from somedigests (slowing down and not used often)
- Added support for type, preference, location to mirror list
- Fixed filesize bug
- Added --addpath option
- Updated examples in help
- Updated help message and it's layout

0.2.1:
- Added nomirrors, somedigests, mindigests, alldigests options.
- Added XML escaping of the needed strings
- Added generator to the generated xml
- Cleaned up source

0.2.0:
- Moved to the new Metalinker.org system and file specs
- Full rewrite of program structure.

0.1.2:
- Added options: source, publisher, description, rights, format. 
- Speedup in GNUnet algorithm.

0.1.1:
- New XSL sheet loaded
- Critical bugfix: ed2k hash for files larger then 9mb was garbage.

0.1.0:
- Dropped Crypto++ library as a dependency
- Cleaned up most code
- Added noxsl option
- Added --genxsl option to generate local XSL sheets
  (Online XSLT sheets for local files
  are a security hazzard for a local user)

0.0.7:
- Changes .metalink.xml -> .metalinks.xml

0.0.6:
- Translate all "." in filenames to "_" for the .metalink.xml files
    (.gz will add content-encoding in HTTP response for most servers).

0.0.5:
- Moved to version 1 of the metalinks draft
- Kept the publisher option back, which should be moved to the Dublin Core
- Moved makefile and aap files to the root
- Moved links to SourceForge project

0.0.4:
- Added --no{hash} options.
- Added support for a publisher link in the metalinks (--publisher options)

0.0.3:
-	Support for GNUnet links.
- Support for stdout collecting of files
- Bugfix on empty files